--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "dog-app-new",
   "private": true,
+  "homepage": "https://eldavido81.github.io/dog-app-new",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
